sonarqube changes